operhelpdir=@helpdir@/opers
userhelpdir=@helpdir@/users

shared_help = opers/accept       \
              opers/admin        \
              opers/away         \
              opers/chantrace    \
              opers/credits      \
              opers/cycle        \
              opers/error        \
              opers/extban       \
              opers/findforwards \
              opers/help         \
              opers/identify     \
              opers/invite       \
              opers/ison         \
              opers/join         \
              opers/kick         \
              opers/knock        \
              opers/links        \
              opers/list         \
              opers/lusers       \
              opers/map          \
              opers/mkpasswd     \
              opers/motd         \
              opers/names        \
              opers/nick         \
              opers/oper         \
              opers/part         \
              opers/pass         \
              opers/ping         \
              opers/pong         \
              opers/quit         \
              opers/time         \
              opers/topic        \
              opers/trace        \
              opers/user         \
              opers/userhost     \
              opers/users        \
              opers/version      \
              opers/who          \
              opers/whois        \
              opers/whowas


operhelp_DATA = opers/*

userhelp_DATA = ${shared_help} \
                users/*
